Remove slow test for connecting to the AD DC server.

DsBind was slowing down Chrome startup blocking the file thread for
up to a few minutes on some machines. This check is not really delivering
any more useful information to us so it can be safely removed.

BUG=621270
TEST=none

Review-Url: https://codereview.chromium.org/2157143003
Cr-Commit-Position: refs/heads/master@{#406373}

Former-commit-id: f34984bbeee68c231b5ad17464ad8ea41f1f0d09